--- a/pages sloth/styles/home.css
+++ b/pages sloth/styles/home.css
@@ -1,7 +1,7 @@
 @media screen and (min-width: 601px) {
-  * {
+  /* * {
     box-sizing: border-box;
-  }
+  } */
   body {
     font-size: 14px;
   }
@@ -99,7 +99,8 @@
     margin: auto;
     /* padding: 20px; */
     border: 1px solid #888;
-    width: 35%;
+    width: 55%;
+    height: 55%;
     display: flex;
     flex-direction: column;
     font-size: 32px;
@@ -114,15 +115,16 @@
   .member-table {
     /* justify-content: center; */
     text-align: left;
-    border-spacing: 30px 5px;
+    border-spacing: 30px 18px;
     padding-right: 30px;
-    margin-left: 15%;
+    margin-left: 20%;
   }
   .modal-header {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    margin-top: 30px;
   }
   .modal-table {
     text-align: center;
@@ -224,6 +226,10 @@
   .btmember span {
     display: none;
   }
+  .btmember img {
+    height: 4ccccccccccccccccc0px;
+    width: 40px;
+  }
   .start {
     height: 60px;
     width: 350px;
@@ -243,7 +249,7 @@
     left: 0;
     top: 0;
     width: 100%;
-    height: 110%;
+    height: 103%;
     overflow: auto;
     background-color: rgb(0, 0, 0);
     background-color: rgba(0, 0, 0, 0.4);
