--- a/Views/Home/_MemberModal.cshtml
+++ b/Views/Home/_MemberModal.cshtml
@@ -1,3 +1,6 @@
+@section Styles {
+<link rel="stylesheet" href="~/css/home.css" />
+}
 <div id="myModal" class="modal off">
     <!-- Modal content -->
     <div class="modal-content">
