--- a/wwwroot/css/home.css
+++ b/wwwroot/css/home.css
@@ -1,131 +1,146 @@
 @media screen and (min-width: 601px) {
-  /* * {
-    box-sizing: border-box;
-  } */
-  body {
-    font-size: 14px;
-  }
-  .main_container {
-    min-height: 100vh;
-    background: rgba(255, 255, 255, 1);
-    opacity: 1;
-    overflow: hidden;
+  .body {
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
-  }
-  .label {
-    width: 667px;
-    color: rgba(0, 0, 0, 1);
-    font-family: Roboto;
-    font-weight: Bold;
-    font-size: 64px;
-    opacity: 1;
-    text-align: center;
-    margin-left: 50px;
+    margin: auto;
+    position: relative;
   }
 
-  .logo {
-    width: 35%;
-    height: 35%;
-    background: url("../images/v106_28.png");
-    opacity: 1;
-    border-radius: 50%;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  }
   .container {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
   }
-  .member {
+
+  .container > * {
+    margin: auto 20px;
   }
 
-  .btmember {
-    color: rgba(255, 255, 255, 1);
-    position: absolute;
-    font-family: Roboto;
-    font-weight: Regular;
-    font-size: 24px;
-    opacity: 1;
-    text-align: center;
-    width: 200px;
-    height: 50px;
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
-    bottom: 50px;
-    right: 50px;
-    box-shadow: 0px 3px 3px
-      rgba(0, 0.16793221235275269, 0.3125, 0.20000000298023224);
-    overflow: hidden;
-    border: none;
+  .logo {
+    max-width: 400px;
+    width: 40%;
+    height: auto;
+    border-radius: 50%;
+    box-shadow: 0px 4px 4px var(--shadow);
+  }
+
+  .container-label {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
   }
 
-  .start {
-    height: 60px;
-    width: 350px;
-    background: #0275d8;
-    border-radius: 15px;
-    color: white;
+  .label {
+    font-size: 48px;
+    font-weight: bold;
+    text-align: center;
+    text-shadow: -2px -2px 0 #ffffff, 2px -2px 0 #ffffff, -2px 2px 0 #ffffff,
+      2px 2px 0 #ffffff;
+  }
+
+  a.start {
+    display: block;
+    height: 10%;
+    width: 55%;
+    line-height: 60px;
+    text-decoration: none;
+    text-align: center;
+    background: var(--blue);
+    color: #ffffff;
     font-size: 24px;
-    border: none;
+    border-radius: 15px;
     box-shadow: 0 4px 4px 0 rgba(0, 47, 80, 0.2);
     margin-top: 30px;
   }
+
+  a:hover.start {
+    cursor: pointer;
+  }
+
+  a:active.start {
+    background: var(--darkblue);
+  }
+
+  .btn-member {
+    color: var(--blackgray);
+    background-color: #efefefef;
+    position: absolute;
+    font-size: 18px;
+    text-align: center;
+    width: 15%;
+    height: 8%;
+    bottom: 50px;
+    right: 50px;
+    box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.2);
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 0 30px;
+    cursor: pointer;
+    border: none;
+  }
+
+  .btn-member:focus {
+    outline: none;
+  }
+
+  .btn-member:active {
+    outline: none;
+    background-color: #99999999;
+  }
+
   .modal {
-    display: none;
+    display: flex;
     position: absolute;
     z-index: 1;
-    padding-top: 100px;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: auto;
-    background-color: rgb(0, 0, 0);
     background-color: rgba(0, 0, 0, 0.4);
     justify-content: center;
     align-items: center;
+  }
+
+  .modal.off {
+    display: none;
   }
 
   /* Modal Content */
   .modal-content {
     background-color: #fefefe;
     margin: auto;
-    /* padding: 20px; */
-    border: 1px solid #888;
-    width: 55%;
-    height: 55%;
+    padding: 50px;
     display: flex;
     flex-direction: column;
-    font-size: 32px;
-    border-radius: 30px;
-    justify-self: center;
-    align-self: center;
-    font-family: "Roboto";
-    padding-bottom: 80px;
-    box-shadow: 0 4px 4px 0 rgba(0, 47, 80, 0.2);
-    margin-top: 10%;
-  }
-  .member-table {
-    /* justify-content: center; */
-    text-align: left;
-    border-spacing: 30px 18px;
-    padding-right: 30px;
-    margin-left: 20%;
-  }
-  .modal-header {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
     justify-content: center;
-    margin-top: 30px;
+    align-items: center;
+    font-size: 24px;
+    border-radius: 30px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2);
+    position: relative;
+    animation: movemodal 0.25s;
   }
+
+  .modal-content > * {
+    margin: 10px;
+  }
+
+  table.member-table {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    column-gap: 20px;
+    row-gap: 10px;
+  }
+
+  .member-table tbody,
+  .member-table tr {
+    display: contents;
+  }
+
   .modal-table {
     text-align: center;
     justify-content: center;
@@ -133,12 +148,11 @@
   }
   /* The Close Button */
   .close {
-    position: fixed;
-    color: #aaaaaa;
-    float: right;
-    font-size: 28px;
     font-weight: bold;
-    display: none;
+    font-size: 28px;
+    position: absolute;
+    top: 10px;
+    right: 20px;
   }
 
   .close:hover,
@@ -147,164 +161,174 @@
     text-decoration: none;
     cursor: pointer;
   }
-}
 
+  @keyframes movemodal {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+}
 @media screen and (max-width: 600px) {
-  * {
-    box-sizing: border-box;
-  }
-  body {
-    font-size: 14px;
-  }
-  .main_container {
-    min-height: 100vh;
-    background: rgba(255, 255, 255, 1);
-    opacity: 1;
-    overflow: hidden;
+  .body {
+    height: 100vh;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
-  }
-  .label {
-    width: 667px;
-    color: rgba(0, 0, 0, 1);
-    font-family: Roboto;
-    font-weight: Bold;
-    font-size: 36px;
-    opacity: 1;
-    text-align: center;
-    justify-content: center;
-    /* margin-left: 50px; */
-    margin-top: 25px;
-  }
-  .label span {
-    text-align: center;
+    margin: auto;
+    position: relative;
   }
 
-  .logo {
-    width: 35%;
-    height: 35%;
-    background: url("../images/v106_28.png");
-    opacity: 1;
-    border-radius: 50%;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  }
   .container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
   }
-  .member {
+
+  .container > * {
+    margin: auto 20px;
   }
 
-  .btmember {
-    color: rgba(255, 255, 255, 1);
-    position: absolute;
-    font-family: Roboto;
-    font-weight: Regular;
-    font-size: 24px;
-    opacity: 1;
-    text-align: center;
-    width: 60px;
-    height: 60px;
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
-    bottom: 0px;
-    right: 13px;
-    box-shadow: 0px 3px 3px
-      rgba(0, 0.16793221235275269, 0.3125, 0.20000000298023224);
-    overflow: hidden;
-    border: none;
+  .logo {
+    max-width: 400px;
+    width: 50%;
+    height: auto;
+    border-radius: 50%;
+    box-shadow: 0px 4px 4px var(--shadow);
+  }
+
+  .container-label {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    border-radius: 50px;
   }
-  .btmember span {
-    display: none;
+
+  .label {
+    font-size: 48px;
+    font-weight: bold;
+    text-align: center;
+    text-shadow: -2px -2px 0 #ffffff, 2px -2px 0 #ffffff, -2px 2px 0 #ffffff,
+      2px 2px 0 #ffffff;
   }
-  .btmember img {
-    height: 4ccccccccccccccccc0px;
-    width: 40px;
-  }
-  .start {
+
+  a.start {
+    display: block;
     height: 60px;
-    width: 350px;
-    background: #0275d8;
-    border-radius: 15px;
-    color: white;
+    width: 250px;
+    line-height: 60px;
+    text-decoration: none;
+    text-align: center;
+    background: var(--blue);
+    color: #ffffff;
     font-size: 24px;
-    border: none;
+    border-radius: 15px;
     box-shadow: 0 4px 4px 0 rgba(0, 47, 80, 0.2);
     margin-top: 30px;
   }
-  .modal {
+
+  a:hover.start {
+    cursor: pointer;
+  }
+
+  a:active.start {
+    background: var(--darkblue);
+  }
+
+  .btn-member {
+    color: var(--blackgray);
+    background-color: #efefefef;
+    position: absolute;
+    font-size: 28px;
+    text-align: center;
+    width: 60px;
+    height: 60px;
+    bottom: 20px;
+    right: 20px;
+    box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.2);
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 0 30px;
+    cursor: pointer;
+    border: none;
+    border-radius: 50px;
+  }
+  .btn-member span {
     display: none;
+  }
+  .btn-member:focus {
+    outline: none;
+  }
+
+  .btn-member:active {
+    outline: none;
+    background-color: #99999999;
+  }
+
+  .modal {
+    display: flex;
     position: absolute;
     z-index: 1;
-    /* padding-top: 100px; */
     left: 0;
     top: 0;
     width: 100%;
-    height: 103%;
-    overflow: auto;
-    background-color: rgb(0, 0, 0);
+    height: 100%;
     background-color: rgba(0, 0, 0, 0.4);
     justify-content: center;
     align-items: center;
+  }
+
+  .modal.off {
+    display: none;
   }
 
   /* Modal Content */
   .modal-content {
     background-color: #fefefe;
     margin: auto;
-    /* padding: 20px; */
-    border: 1px solid #888;
-    width: 90%;
-    height: 60%;
+    padding: 50px;
     display: flex;
     flex-direction: column;
-    font-size: 32px;
-    border-radius: 30px;
-    justify-self: center;
-    align-self: center;
-    font-family: "Roboto";
-    padding-bottom: 80px;
-    box-shadow: 0 4px 4px 0 rgba(0, 47, 80, 0.2);
-    margin-top: 30%;
-    /* min-height: 100vh; */
-  }
-  .member-table {
-    /* justify-content: center; */
-    text-align: left;
-    border-spacing: 5px 15px;
-    padding-right: 0px;
-    margin-left: 5%;
-    margin-top: 5%;
-  }
-  .modal-header {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
     justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    border-radius: 30px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2);
+    position: relative;
+    animation: movemodal 0.25s;
   }
+
+  .modal-content > * {
+    margin: 10px;
+  }
+
+  table.member-table {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    column-gap: 20px;
+    row-gap: 10px;
+  }
+
+  .member-table tbody,
+  .member-table tr {
+    display: contents;
+  }
+
   .modal-table {
     text-align: center;
     justify-content: center;
     align-items: center;
-    font-size: 20px;
   }
   /* The Close Button */
   .close {
-    position: fixed;
-    color: #aaaaaa;
-    float: right;
-    font-size: 28px;
     font-weight: bold;
-    display: none;
+    font-size: 28px;
+    position: absolute;
+    top: 10px;
+    right: 20px;
   }
 
   .close:hover,
@@ -312,5 +336,14 @@
     color: #000;
     text-decoration: none;
     cursor: pointer;
+  }
+
+  @keyframes movemodal {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
   }
 }
