--- a/wwwroot/css/home.css
+++ b/wwwroot/css/home.css
@@ -43,8 +43,9 @@
 
   a.start {
     display: block;
-    height: 10%;
-    width: 55%;
+    height: 60px;
+    max-width: 350px;
+    width: 80%;
     line-height: 60px;
     text-decoration: none;
     text-align: center;
@@ -70,15 +71,16 @@
     position: absolute;
     font-size: 18px;
     text-align: center;
+    min-width: 150px;
     width: 15%;
-    height: 8%;
+    height: 60px;
     bottom: 50px;
     right: 50px;
     box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.2);
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
-    padding: 0 30px;
+    column-gap: 15px;
     cursor: pointer;
     border: none;
   }
