--- a/wwwroot/css/home.css
+++ b/wwwroot/css/home.css
@@ -44,8 +44,8 @@
   a.start {
     display: block;
     height: 60px;
-    max-width: 350px;
-    width: 80%;
+    min-width: 200px;
+    width: 55%;
     line-height: 60px;
     text-decoration: none;
     text-align: center;
@@ -291,12 +291,12 @@
   .modal-content {
     background-color: #fefefe;
     margin: auto;
-    padding: 50px;
+    padding: 30px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-size: 0.8rem;
+    font-size: 16px;
     border-radius: 30px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2);
     position: relative;
