--- a/wwwroot/css/login.css
+++ b/wwwroot/css/login.css
@@ -18,6 +18,15 @@
   box-shadow: 0px 4px 4px var(--shadow);
 }
 
+@media screen and (max-width: 499px) {
+  .container {
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
+    box-shadow: initial;
+  }
+}
+
 .container * {
   margin: 20px 0;
 }
