--- a/Views/Shared/_NavigationUser.cshtml
+++ b/Views/Shared/_NavigationUser.cshtml
@@ -10,6 +10,7 @@
     </a>
     <div class="menu">
         <a id="lab" asp-controller="Lab" asp-action="Index" class='@("Lab" == controller ? "active" : "")'>Lab</a>
+        <a id="colab" asp-controller="CoLab" asp-action="Index" class='@("CoLab" == controller ? "active" : "")'>Co-Lab</a>
         <a id="booklist" asp-controller="User" asp-action="Booklist"
             class='@("Booklist" == action ? "active" : "")'>Booklist</a>
         <a id="profile" asp-controller="User" asp-action="Profile" class='@("Profile" == action ||
