--- a/Views/Shared/_NavigationUser.cshtml
+++ b/Views/Shared/_NavigationUser.cshtml
@@ -8,7 +8,7 @@
         <img src="~/assets/images/brand.jpg" alt="logo" class="brand-img" />
         <div class="brand-text">Sloth Flying Lab</div>
     </a>
-    <div class="menu">
+    <div class="menu" id="myTopnav">
         <a id="lab" asp-controller="Lab" asp-action="Index" class='@("Lab" == controller ? "active" : "")'>Lab</a>
         <a id="colab" asp-controller="CoLab" asp-action="Index" class='@("CoLab" == controller ? "active" : "")'>Co-Lab</a>
         <a id="booklist" asp-controller="User" asp-action="Booklist"
@@ -16,5 +16,16 @@
         <a id="profile" asp-controller="User" asp-action="Profile" class='@("Profile" == action ||
                         "EditProfile" == action ? "active" : "")'>Profile</a>
         <a id="logout" asp-controller="User" asp-action="Logout" class="logout">Logout</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
     </div>
 </nav>
+<script>
+function myFunction() {
+  var x = document.getElementById("myTopnav");
+  if (x.className === "menu") {
+    x.className += " responsive";
+  } else {
+    x.className = "menu";
+  }
+}
+</script>
