--- a/Views/LabAdmin/Index.cshtml
+++ b/Views/LabAdmin/Index.cshtml
@@ -13,7 +13,7 @@
     {
         <div class="lab">
             <div>
-                <img src="@Url.Content(lab.ImagceUrl)" alt="logo" class="lab-img">
+                <img src="@Url.Content(lab.ImageUrl)" alt="logo" class="lab-img">
             </div>
             <div>
                 <div>Laboratory @lab.Id</div>
