--- a/wwwroot/css/navigation.css
+++ b/wwwroot/css/navigation.css
@@ -67,13 +67,61 @@
 .icon {
   display: none;
 }
-
-@media screen and (max-width: 600px) {
-  c.menu a:not(:first-child) {
+.sidenav {
+  display: none;
+}
+@media screen and (max-width: 970px) {
+  .menu a {
     display: none;
   }
   .menu a.icon {
     float: right;
     display: block;
+  }
+}
+
+@media screen and (max-width: 970px) {
+  .sidenav {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    width: 0;
+    position: fixed;
+    z-index: 100;
+    top: 0;
+    right: 0;
+    background-color: #111;
+    overflow: auto;
+    transition: 0.5s;
+    padding-top: 60px;
+  }
+
+  .sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+  }
+
+  .sidenav a:hover {
+    color: #f1f1f1;
+  }
+
+  .sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+  }
+  .sidenav .logout {
+    height: 55px;
+    display: flex;
+    align-items: center;
+    color: #ffffff;
+  }
+  .sidenav .logout:hover {
+    background: #03d185;
   }
 }
