--- a/wwwroot/css/profile.css
+++ b/wwwroot/css/profile.css
@@ -1,3 +1,9 @@
+.body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .container {
   display: flex;
   flex-direction: column;
@@ -5,11 +11,23 @@
   align-items: center;
   padding: 30px;
   min-height: 100%;
+  background-color: white;
+  width: 70%;
+  border-radius: 5rem;
+  box-shadow: 0px 4px 4px var(--shadow);
+  margin: 20px 0px 20px 0px;
+}
+
+@media screen and (max-width: 699px) {
+  .container {
+    width: 80%;
+  }
 }
 
 .container * {
   margin: 20px 0;
 }
+
 
 .information {
   display: grid;
@@ -17,6 +35,23 @@
   grid-template-rows: auto auto auto auto;
   column-gap: 30px;
   row-gap: 20px;
+}
+
+@media screen and (max-width: 499px) {
+  .body {
+    background-color: white;
+  }
+  
+  .container {
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
+    box-shadow: initial;
+  }
+
+  .information {
+    grid-template-columns: auto;
+  }
 }
 
 .information > * {
