--- a/wwwroot/css/edit_profile.css
+++ b/wwwroot/css/edit_profile.css
@@ -1,9 +1,20 @@
+.body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 30px;
+  padding: 10px;
+  background-color: #ffffff;
+  width: 70%;
+  border-radius: 5rem;
+  box-shadow: 0px 4px 4px var(--shadow);
+  margin: 20px 0px;
 }
 
 .container > * {
@@ -14,7 +25,35 @@
   display: grid;
   grid-template-columns: auto auto;
   column-gap: 30px;
-  row-gap: 20px;
+  row-gap: 10px;
+}
+
+@media screen and (max-width: 699px) {
+  .container {
+    width: 80%;
+  }
+  .information {
+    grid-template-columns: auto;
+    row-gap: 5px;
+  }
+}
+
+@media screen and (max-width: 499px) {
+  .body {
+    background-color: var(--greenbg);
+  }
+  
+  .container {
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
+    box-shadow: initial;
+    background-color: var(--greenbg);
+  }
+
+  .information {
+    grid-template-columns: auto;
+  }
 }
 
 .information > * {
@@ -84,6 +123,7 @@
   width: 250px;
   padding: 5px;
   font-size: 18px;
+  margin-bottom: 10px;
 }
 
 .container .warning {
@@ -118,6 +158,10 @@
 input:focus,
 button:focus {
   outline: none;
+}
+
+button[type="submit"] {
+  margin-top: 10px;
 }
 
 .information label {
