--- a/wwwroot/css/register.css
+++ b/wwwroot/css/register.css
@@ -122,6 +122,7 @@
     height: 100%;
     border-radius: 0;
     box-shadow: initial;
+    background-color: var(--greenbg);
   }
   .register-form {
     grid-template-columns: auto;
