edit slide nabar

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -68,6 +68,7 @@
         default: break;
     }
     <script src="~/js/site.js"></script>
+    <script src="~/js/navigation.js"></script>
     @RenderSection("Scripts", required: false)
 </body>
 
