--- a/Views/Shared/_NavigationAdmin.cshtml
+++ b/Views/Shared/_NavigationAdmin.cshtml
@@ -8,7 +8,7 @@
         <img src="~/assets/images/brand.jpg" alt="logo" class="brand-img" />
         <div class="brand-text">Sloth Flying Lab</div>
     </a>
-    <div class="menu" id="myTopnav">
+    <div id="Topnav" class="menu">
         <a id="lab" asp-controller="LabAdmin" asp-action="Index"
             class='@("LabAdmin" == controller ? "active" : "")'>Lab</a>
         <a id="colab" asp-controller="CoLab" asp-action="Index"
@@ -18,10 +18,10 @@
         <a id="blacklist" asp-controller="Admin" asp-action="Blacklist"
             class='@("Blacklist" == action ? "active" : "")'>Blacklist</a>
         <a id="logout" asp-controller="Admin" asp-action="Logout" class="logout">Logout</a>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
+        <a href="javascript:void(0);" class="menu-icon" onclick="slideBar()"><i class="fa fa-bars"></i></a>
     </div>
-    <div id="mySidenav" class="sidenav">
-        <a href="javascript:void(0)" class="closebtn" onclick="myFunction()">&times;</a>
+    <div id="Sidenav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="slideBar()">&times;</a>
         <a id="lab" asp-controller="LabAdmin" asp-action="Index"
             class='@("LabAdmin" == controller ? "active" : "")'>Lab</a>
         <a id="colab" asp-controller="CoLab" asp-action="Index"
@@ -30,18 +30,9 @@
             class='@("Search" == controller ? "active" : "")'>Search</a>
         <a id="blacklist" asp-controller="Admin" asp-action="Blacklist"
             class='@("Blacklist" == action ? "active" : "")'>Blacklist</a>
-        <a id="logout" asp-controller="Admin" asp-action="Logout" class="logout">Logout</a>
+        <a id="logout" asp-controller="Admin" asp-action="Logout">Logout</a>
     </div>
 </nav>
 <script>
-    function myFunction() {
-        var x = document.getElementById("myTopnav");
-        if (x.className === "menu") {
-            x.className += " responsive";
-            document.getElementById("mySidenav").style.width = "250px";
-        } else {
-            x.className = "menu";
-            document.getElementById("mySidenav").style.width = "0";
-        }
-    }
+    
 </script>
